<resources>
    <string name="app_name">Searchact</string>
    <string name="sample">Sample</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password*</string>
    <string name="lost_password">Lost Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="do_you_have_any_account">Do you have any account?</string>
    <string name="register_now">Register Now</string>
    <string name="register_account">Register Account</string>
    <string name="fill_information_below_to_register_your_account">Fill information below to register your account</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="username">Username*</string>
    <string name="email">Email*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="sign_up">Sign Up</string>
    <string name="term_conditions">Term Conditions</string>
    <string name="i_am_agree_with">I am agree with</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="lost_passwords">Lost Password</string>
    <string name="lost_password_message">Enter your username or email address. You will receive a link to create a new password via email.</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_again">Send Again</string>
    <string name="reset_email_sent">Reset Email Sent</string>
    <string name="resend_message">We have sent you an email the link to reset your new password.</string>
    <string name="ok">OK</string>
    <string name="go_to_email">GO TO EMAIL</string>
    <string name="business_name">Business Name*</string>
    <string name="personal_email">Personal Email*</string>
    <string name="business_email">Business Email*</string>
    <string name="message">Message*</string>
    <string name="claim">Claim</string>
    <string name="rate">Rate</string>
    <string name="rate_question">What you experienced will help Us a lot!</string>
    <string name="review">Review</string>
    <string name="title">Title</string>
    <string name="write_about_this_business">Write about this business*</string>
    <string name="question_1">How would you rate the quality of communication you had with the business?</string>
    <string name="say_something_here">Say something here…</string>
    <string name="attach_file">Attach File</string>
    <string name="looking_for_something">Looking for something</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_feed">Feed</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_messages">Messages</string>
    <string name="title_more">More</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="view_all">View All</string>
    <string name="feature_listing">Feature Listing</string>
    <string name="messages">Messages</string>
    <string name="no_message">No Message</string>
    <string name="no_messages">You didn’t make any conversation yet</string>
    <string name="notification">Notification</string>
    <string name="no_notification">No Notification</string>
    <string name="no_notification_yet">There is no any notification yet.</string>
    <string name="requests">Requests</string>
    <string name="total_friend_request">Total friend request</string>
    <string name="load_more">Load More</string>
    <string name="view_profile">View Profile</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="categories">Categories</string>
    <string name="claim_your_listing">CLAIM YOUR LISTING</string>
    <string name="report_flag">REPORT FLAG</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_info">Contact Info</string>
    <string name="visit_website">Visit Website</string>
    <string name="opening_hour">Opening Hour</string>
    <string name="address">Address</string>

    <string name="go_to_google_map">GO TO GOOGLE MAP</string>
    <string name="photos">Photos</string>
    <string name="add_photo">Add Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="cancel">Cancel</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="reviews">Reviews</string>
    <string name="add_friend">Add Friend</string>
    <string name="job_announcements">Job Announcements</string>
    <string name="no_job_announcement">No Job Announcement</string>
    <string name="no_job_announcement_message">There no any job announcement posted yet</string>
    <string name="employment_opportunities">Employment Opportunities</string>
    <string name="no_photo">No Photo</string>
    <string name="no_photo_message">There is no photo added yet.</string>
    <string name="please_select_issue">Please select issue*</string>
    <string name="description">Description</string>
    <string name="submit">SUBMIT</string>
    <string name="report_reason">Report Reason</string>
    <string name="create_job">Create Job</string>
    <string name="tittle_required">Tittle*</string>
    <string name="attach_image">Attach Image</string>
    <string name="save">SAVE</string>
    <string name="search_jobs">Search Jobs</string>
    <string name="edit">Edit</string>
    <string name="change_listing">Change Listing</string>
    <string name="delete_job_announcement">Delete Job Announcement</string>
    <string name="delete_job_message">Are you sure you want to delete the job announcement name : New Manager Needed?</string>
    <string name="next">Next</string>
    <string name="search_deal">Search Deal</string>
    <string name="expired_on">Expired on</string>
    <string name="change">Change</string>
    <string name="add_new_service">Add New Service</string>
    <string name="search_event">Search Event</string>
    <string name="city">City*</string>
    <string name="search_listing">Search Listing</string>
    <string name="publish">publish</string>
    <string name="attach_feature_image">Attach Feature Image</string>
    <string name="phone_number">Phone Number*</string>
    <string name="title_activity_pin_maps">Map</string>
    <string name="save_pin">SAVE PIN</string>
    <string name="title_activity_maps">Map</string>
    <string name="try_again">Try Again</string>
    <string name="share">Share</string>
    <string name="pay">Pay</string>
    <string name="search_page">Search Page</string>
    <string name="retry">Retry</string>
    <string name="there_is_no_any_content_match_with_your_search">There is no any content match with your search!</string>
    <string name="search_not_found">Search Not Found</string>
    <string name="feeds">Feeds</string>
    <string name="search">Search</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="all_friends">All Friends</string>
    <string name="search_friend">Search Friend</string>
    <string name="type_message">Type your message</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_connection_message">Please check your internet connection</string>
    <string name="refresh">Refresh</string>

</resources>
